# GRPO-mini

./: .gitignore  GRPO_EXP.md  LICENSE  README.md  config.yaml  config_24GB.yaml  config_kl.yaml  config_ot.yaml  environment.yml  grpo.ipynb  grpo_exp.py  main.py  pyproject.toml  requirements.txt  results_reading.ipynb  rl_datasets.py  runs  train_grpo.py
configs/configs_0.5b/: config_approx_kl_beta0.05_target0.yaml  config_kl_beta0.2_target0_0.5b.yaml  config_ot_beta0.1_target0.05.yaml
configs/configs_0.5b_ot/: config_ot_beta0.1_target0.05_w32_0.5b.yaml  config_ot_beta0.1_target0.05_w64_0.5b.yaml
configs/configs_3b/: config_approx_kl_beta0.1_target0_3b.yaml  config_approx_kl_beta0.2_target0_3b.yaml  config_kl_beta0.2_target0_3b.yaml  config_ot_beta0.1_target0.05_3b.yaml
configs/configs_3b_ot/: config_ot_beta0.1_target0.05_w16_3b.yaml  config_ot_beta0.1_target0.05_w8_3b.yaml
configs_0.5b/: config_approx_kl_beta0.05_target0.yaml  config_kl_beta0.05_target0.yaml  config_ot_beta0.1_target0.05.yaml
configs_0.5b_ot/: config_ot_beta0.1_target0.05_w8_0.5b.yaml
configs_3b/: config_approx_kl_beta0.05_target0.yaml  config_kl_beta0.05_target0_3b.yaml  config_kl_beta0.1_target0_3b.yaml
configs_3b_ot/: config_ot_beta0.05_target0.05_w8_3b.yaml  config_ot_beta0.1_target0.05_w4_3b.yaml  config_ot_beta0.1_target0.05_w64_3b.yaml  config_ot_beta0.2_target0.05_w8_3b.yaml
configs_7b/: config_approx_kl_beta0.05_target0.yaml  config_kl_beta0.05_target0_7b.yaml  config_ot_beta0.1_target0.05_7b.yaml
src/: rl_datasets.py  train_grpo.py
(+1 files in other folders)
